--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,9 +28,9 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
   <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
   <!-- <link rel="stylesheet" href="/css/reset.css"> -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style_with_stolen_bootstrap_stuff.min.css">
   <link rel="stylesheet" href="/css/navbar-icons.css">
   <link id="darkModeStylesheet" rel="stylesheet" href="">
 
