--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -29,3 +29,24 @@ textarea {
     overflow: auto;
     resize: vertical
 }
+
+button,
+select {
+    text-transform: none;
+}
+
+button,
+input {
+    overflow: visible;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
