--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -36,6 +36,10 @@
 
 #navbarProfileImage.active {
     border: 1px solid #900202;
+
+    + .navbar-username {
+        font-weight: 400;
+    }
 }
 
 #navbarProfileImage:hover {
@@ -58,6 +62,10 @@
 
 #topNav .nav-link.active {
     color: #900202;
+}
+
+#topNav .nav-link.active .nav-link-text {
+    font-weight: 400;
 }
 
 #notificationsDropdownLink:hover,
