New logged out/intro page!

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -2,9 +2,14 @@ $text-black: #1a1717; // Text for light mode.
 $text-white: #ffffff; // Text color for dark mode.
 
 $background-grey: #f9f9fa; // Page background
+$lightest-grey: #f3f3f3; // Form input backgrounds
 $light-grey: #efefef;
 $medium-grey: #dfdfdf; // Post borders
 $darker-grey: #cbcbcb; // Currently only horizontal rules I think?
 
 $light-blue: #338fc2; // Links
 $sweet-red: #ce1717; // The Best Red (TM). Navbar, hovers, buttons, etc.
+
+$lightest-pink: #fffafc;
+$light-pink: lighten($sweet-red, 40%);
+$dark-pink: lighten($sweet-red, 20%);
