--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,7 +1,9 @@
 @import 'normalize';
 @import 'colors';
+@import 'mixins';
 @import 'typography';
 @import 'layout';
 @import 'navbar';
 @import 'forms';
 @import 'weird-bootstrap-rules';
+@import 'intro';
