--- a/views/partials/message.handlebars
+++ b/views/partials/message.handlebars
@@ -1,5 +1,5 @@
 {{#if sessionFlash.message}}
-  <div class="alert alert-{{ sessionFlash.type }}">
+  <div class="alert">
     {{{ sessionFlash.message }}}
   </div>
 {{/if}}
